HighContrast: Fix calendar selection
The selected day was not differentiated from other
days at all. Render it white on black instead.

https://bugzilla.gnome.org/show_bug.cgi?id=746369

--- a/gtk/theme/HighContrast/_common.scss
+++ b/gtk/theme/HighContrast/_common.scss
@@ -1861,6 +1861,9 @@ GtkExpander {
  ***********/
 GtkCalendar {
   border: 1px solid $borders_color;
+  &:selected {
+    @extend .view:selected;
+  }
   &.button {
     @extend %undecorated_button;
     padding: 0 4px; //FIXME no effect on these pseudobuttons
